syntax = "proto3";
package src.aduib_rpc.proto;
import "google/protobuf/struct.proto";
import "chat_completion.proto";

message Usage {
  int64 prompt_tokens = 1;
  int64 completion_tokens = 2;
  int64 total_tokens = 3;
  string currency = 4;
  double latency = 5;
}

message ToolCall {
  message FunctionCall {
    string name = 1;
    string arguments = 2;
  }
    string id = 1;
    string type = 2;
    FunctionCall function = 3;
}

message MessageContent {
    string content = 1;
    string role = 2;
    string name = 3;
    repeated ToolCall tool_calls = 4;
    google.protobuf.Struct audio= 5;
    google.protobuf.Struct annotations= 6;
}

message MessageContentChunk {
    int64 index = 1;
    MessageContent message = 2;
    string text = 3;
    Usage usage = 4;
    string finish_reason = 5;
    MessageContent delta = 6;
}

message ChatCompletionResponse {
  string id = 1;
  string object = 2;
  int64 created = 3;
  string model = 4;
  repeated MessageContentChunk choices = 5;
  Usage usage = 6;
  bool done = 7;
  string system_fingerprint=8;
  ChatCompletion prompt_messages=9;
  MessageContent message=10;
}